fix(tocco-theme): prevent scrollbar during toastr animation
- the scrollbar ensures accessibility of content in a position fixed box
- scrollbar flickers because the content box leaves the parent box during toastr animation

--- a/packages/tocco-theme/src/ToccoTheme/vendor-extension/toastr/third-party-integration.scss
+++ b/packages/tocco-theme/src/ToccoTheme/vendor-extension/toastr/third-party-integration.scss
@@ -35,6 +35,7 @@
   .bottom-center {
     max-height: 100%; // usability: ensure accessibility of all notification boxes
     overflow-y: auto; // todo: enhance usability - it is not obvious that content is scrollable
+    padding-bottom: 25px;  // reset: react-redux-toastr (index.scss)
   }
 
   .toastr {
